# paulie

./: main.py  pyproject.toml
.github/: dependabot.yml
